[package]
name = "h256only"
version = "0.4.1"
authors = ["Aaron Deadman <aaron@introspection.net.au>","Michael Yang <mikkyangg@gmail.com>"]
description = "Web token library based on rust-jwt with support only for HMACSHA256"
documentation = "http://mikkyang.github.io/rust-jwt/doc/jwt/index.html"
homepage = "http://github.com/adeadman/rust-h256only"
repository = "http://github.com/adeadman/rust-h256only"
readme = "README.md"
keywords = ["JWT", "token", "web", "h256only"]
license = "MIT"

[dependencies]
rust-crypto = "0.2"
rustc-serialize = "0.3"
